<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Informasi Sekolah</string>
    <string name="action_settings">Settings</string>
    <string name="menu_sd">SD</string>
    <string name="menu_smp">SMP</string>
    <string name="menu_sma">SMA</string>
    <string name="title_mainmenu">Main Menu</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="title_about">About</string>
    <string name="view_about">This application would give you information about schools based on your current location. The list of schools is retrieved from BAN\'s site while the detail information of schools  is retrieved from their appropriate location (eg: their sites).</string>
    <string name="view_copyright">© Junaedi Permana &amp; Blue Spy. 2013.</string>
    <string name="view_contact_site">http://expressthisout.com</string>
    <string name="menu_tk">TK</string>
    <string name="menu_smk">SMK</string>

</resources>